syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/labasubagia/simplebank/pb";

message CreateUserRequest {
    string username = 1;
    string email = 2;
    string full_name = 3;
    string password = 4;
}

message CreateUserResponse {
    User user = 1;
}
